[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dextro"
dynamic = ["version"]
description = "Dextro IoT Device Monitoring Platform with AI Analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Dextro Team" },
]
keywords = [
    "iot",
    "device-monitoring",
    "streamlit",
    "ai",
    "analytics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "streamlit>=1.28.0",
    "supabase>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "strands-agents[anthropic]>=0.1.0",
    "anthropic>=0.18.0",
    "plotly>=5.0.0",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Documentation = "https://github.com/your-username/dextro#readme"
Issues = "https://github.com/your-username/dextro/issues"
Source = "https://github.com/your-username/dextro"

[project.scripts]
dextro = "app:main"

[tool.hatch.version]
path = "app.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=6.0",
]

[tool.hatch.envs.default.scripts]
start = "streamlit run app.py"
dev = "streamlit run app.py --server.runOnSave true"
test = "pytest {args:tests}"
lint = [
    "black --check --diff .",
    "isort --check-only --diff .",
    "flake8 .",
]
format = [
    "black .",
    "isort .",
]

[tool.black]
target-version = ["py38"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100